# slopgate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.claude/: settings.json
.slopgate/: baseline.json  config.toml  convention-sources.json
crates/slopgate-core/: Cargo.toml
crates/slopgate-core/scripts/: gen-regex-compat.mjs
crates/slopgate-core/src/: agent.rs  ast_engine.rs  config.rs  enumerate.rs  error.rs  gate.rs  glob.rs  harvest.rs  hash.rs  help.rs  lib.rs  phase.rs  ratchet.rs  regex_engine.rs  report.rs  selftest.rs  severity.rs  suppressions.rs  temp.rs
crates/slopgate-core/src/audit/: git_facts.rs  measures.rs  mod.rs  run.rs
crates/slopgate-core/src/checkers/: actionlint.rs  depcruise.rs  diff_shape.rs  health.rs  index.rs  jscpd.rs  knip.rs  leakscan.rs  mod.rs  shared.rs  shellcheck.rs  tsc.rs  type_coverage.rs  typos.rs
crates/slopgate-core/src/init/: detect_stack.rs  migrate.rs  mod.rs  run.rs  scaffold.rs
crates/slopgate-core/src/install/: agent_hooks.rs  hooks.rs  mod.rs  skills.rs
crates/slopgate-core/src/rules/: baseline.json  packs.rs  stack.json  ux.json
crates/slopgate-core/src/stats/: mod.rs  query.rs  record.rs  store.rs
crates/slopgate-core/tests/fixtures/: config.toml
crates/slopgate-core/tests/parity_vectors/: fingerprint.json  glob.json  line_hash.json  regex_compat.json  resolved_config.json
hooks/: baseline-guard.sh  commit-hook.sh  edit-hook.sh  goal-stop-hook.sh  prompt-meta-hook.sh  session-start.sh  test-hooks-decisions.sh
scripts/: build-npm-packages.mjs
src/: ast-engine.mjs  ast-engine.test.mjs  cli.dispatch.test.mjs  cli.mjs  config.checkers.test.mjs  config.mjs  enumerate.mjs  gate.e2e.test.mjs  gate.mjs  gate.tier.test.mjs  help.mjs  init.mjs  init.test.mjs  install-agent-hooks.mjs  install-hooks.mjs  install-hooks.test.mjs  install-skills.mjs  ratchet.mjs  ratchet.test.mjs  regex-engine.mjs  regex-engine.test.mjs  (+7 more)
tools/leakscan/: Cargo.toml  README.md
tools/leakscan/fixtures/src/components/: Clean.tsx  Shadowed.tsx  UserCard.tsx
tools/leakscan/fixtures/src/services/: users.ts
tools/leakscan/src/: config.rs  detect.rs  main.rs
tools/leakscan/tests/: cli.rs
(+97 files in other folders)
